cabal-version:       2.0
name:                katip-extras
version:             0.2.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Leonid Onokhov
maintainer:          sopvop@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Katip.Extra
  -- other-modules:
  -- other-extensions:
  build-depends: aeson          ^>= 1.4.4.0
               , base           ^>= 4.12.0
               , bytestring     ^>= 0.10.8.2
               , katip          ^>= 0.8.3
               , text           ^>= 1.2.3.1
               , transformers   ^>= 0.5.5
               , unliftio       ^>= 0.2.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
